supported/blueprints/big-iq/v1.2.1/ReadMe.md
## About the F5-VNF-BIG-IQ_v1.2.1 solution blueprint
This is the initial version of the F5VNF BIG-IQ solution blueprint. This blueprint automates the configuration of the BIG-IQ license manager utility and automatically returns all the required license names and BIG-IQ address information required by the other main, blueprint solutions (Gi LAN, Gi Firewall, and Base). You can still manually configure your BIG-IQ license manager; however, if you do use this blueprint, you must deploy this blueprint first, BEFORE deploying another solution blueprint.


#### Copyright
Copyright 2014-2019 F5 Networks Inc.

#### License

##### Apache V2.0 
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at: [http://www.apache.org/licenses/LICENSE-2.0](http://www.apache.org/licenses/LICENSE-2.0).

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.

##### Contributor License Agreement
Individuals or business entities who contribute to this project must have completed and submitted the F5 Contributor License Agreement.
